# verbrauchsmanager

./: .clippy.toml  .gitignore  ANLEITUNG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build-deb.yml
packaging/debian/DEBIAN/: conffiles
packaging/debian/usr/share/doc/verbrauchsmanager/: copyright
packaging/scripts/: build-deb.sh  check-deps.sh
qml/: DatenbankSeite.qml  EingabeSeite.qml  main.qml
src/: bridge.rs  datenbank.rs  main.rs
