[package]
name        = "verbrauchsmanager"
version     = "1.0.0"
edition     = "2021"
description = "Strom-, Wasser- und Gasverbrauchsmanager mit Qt 6 UI"
authors     = ["Verbrauchsmanager"]

# ── Binary-Ziel explizit angeben ─────────────────────────────────────────────
[[bin]]
name = "verbrauchsmanager"
path = "src/main.rs"

# ── Laufzeit-Abhängigkeiten ───────────────────────────────────────────────────
[dependencies]
# Qt6 Rust-Bindings
cxx-qt     = "0.6"
cxx-qt-lib = "0.6"

# Datenbank – SQLite statisch gelinkt (kein extra libsqlite3-dev nötig)
rusqlite = { version = "0.31", features = ["bundled"] }

# CSV-Export
csv = "1.3"

# XLSX-Export (korrekter Crate-Name)
rust_xlsxwriter = "0.68"

# Datum / Zeit
chrono = { version = "0.4", features = ["serde"] }

# Betriebssystem-Pfade (Linux: ~/.local/share, Windows: %APPDATA% usw.)
dirs = "5.0"

# Fehlerbehandlung
anyhow = "1.0"

# ── Build-Abhängigkeiten (nur zur Compile-Zeit) ───────────────────────────────
[build-dependencies]
cxx-qt-build = "0.6"

# ── Release-Optimierungen ─────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
